난이도 추가